:gem: [Feature] enable new vocabloader in EsTokTokenizerFactory, EsTokAnalyzerProvider, and RestAnalyzeAction